# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# DISCLAIMER: This only for IN-TREE TESTS that do not use platform assembly
# input bundles. Any other use case is not supported.

import("//build/zbi/kernel_cmdline.gni")
import("//bundles/assembly_input_groups/assembly_input_groups.gni")

# When setting 'userboot.test.next', 'userboot.next' must be set explicitly, to differentiate
# between running a test, booting or both.
kernel_cmdline("userboot.next-component-manager") {
  visibility = [ ":*" ]
  args = [ "userboot.next=bin/component_manager+--boot" ]
}

assembly_input_groups("bootstrap") {
  visibility = [ "*" ]
  cmdline_deps = [ ":userboot.next-component-manager" ]
}

assembly_input_groups("network") {
  visibility = [ "*" ]
  base_packages = [ "//src/connectivity/network:for_transition" ]
}
