# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("tests") {
  testonly = true
  public_deps = [
    "//build:tests",
    "//build/api:tests",
    "//bundles/fidl:tests",
    "//examples:tests",
    "//scripts:tests",
    "//sdk:tests",
    "//src:tests",
    "//third_party:tests",
    "//tools:tests",
  ]
}
