# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("drivers") {
  deps = [
    "bindlib_codegen",
    "dotmatrix_display",
    "driver_test_realm/sample-driver",
    "fidl_bindlib_codegen",
    "simple/dfv2:pkg",
    "skeleton:pkg",
    "transport",
    "v2/demo-libc:component",
    "v2/demo-number:component",
  ]
}

group("hermetic_tests") {
  testonly = true
  deps = [
    "driver_test_realm:hermetic_tests",
    "simple/dfv2/tests:simple-driver-hermetic-test-pkg",
    "transport:hermetic_tests",
    "v2/demo-number:hermetic_tests",
  ]
}
