# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("drivers") {
  deps = [
    "bind/bindlib_codegen",
    "bind/fidl_bindlib_codegen",
    "demo-number:component",
    "driver_test_realm/sample-driver",
    "metadata:drivers",
    "simple/dfv1:pkg",
    "simple/dfv2:pkg",
    "skeleton:pkg",
    "template:bazel_package",
    "transport",
  ]
}

group("hermetic_tests") {
  testonly = true
  deps = [
    "demo-number:hermetic_tests",
    "driver_test_realm:hermetic_tests",
    "simple/dfv2/tests:simple-driver-hermetic-test-pkg",
    "template:template-test",
    "transport:hermetic_tests",
  ]
}
