# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load(
    "@fuchsia_sdk//fuchsia:assembly.bzl",
    "ARCH",
    "fuchsia_elf_sizes",
    "fuchsia_prebuilt_package",
    "fuchsia_product",
    "fuchsia_product_bundle",
    "fuchsia_product_configuration",
    "fuchsia_virtual_device",
)
load("//build/info:info.bzl", "DEFAULT_PRODUCT_BUILD_INFO")
load("//products/workbench:platform_config.bzl", "workbench_platform_config")

package(default_visibility = [
    "//build/bazel/assembly:__pkg__",
    "//vendor/google:__subpackages__",
])

fuchsia_product_bundle(
    name = "product_bundle_eng.x64",
    board_name = "x64",
    default_virtual_device = ":workbench_emu",
    main = ":assembly_eng.x64",
    partitions_config = "//build/bazel/assembly/partitions_configurations:x64",
    product_bundle_name = "workbench_eng",
    recovery = "//products/zedboot:x64",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    update_version_file = "@fuchsia_build_info//:build_info_version.txt",
    virtual_devices = [
        ":workbench_emu",
    ],
)

fuchsia_product_bundle(
    name = "product_bundle_eng.qemu-x64",
    board_name = "qemu-x64",
    default_virtual_device = ":workbench_emu",
    main = ":assembly_eng.qemu-x64",
    partitions_config = "//build/bazel/assembly/partitions_configurations:qemu-x64",
    product_bundle_name = "workbench_eng",
    recovery = "//products/zedboot:qemu-x64",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    update_version_file = "@fuchsia_build_info//:build_info_version.txt",
    virtual_devices = [
        ":workbench_emu",
    ],
)

fuchsia_product_bundle(
    name = "product_bundle_eng.arm64",
    board_name = "arm64",
    main = ":assembly_eng.arm64",
    partitions_config = "//build/bazel/assembly/partitions_configurations:arm64",
    product_bundle_name = "workbench_eng",
    recovery = "//products/zedboot:arm64",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    update_version_file = "@fuchsia_build_info//:build_info_version.txt",
)

fuchsia_product_bundle(
    name = "product_bundle_eng.vim3",
    board_name = "vim3",
    main = ":assembly_eng.vim3",
    partitions_config = "//build/bazel/assembly/partitions_configurations:vim3",
    product_bundle_name = "workbench_eng",
    recovery = "//products/zedboot:vim3",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    update_version_file = "@fuchsia_build_info//:build_info_version.txt",
)

fuchsia_product(
    name = "assembly_eng.x64",
    board_config = "//boards:x64",
    legacy_bundle = "//build/bazel/assembly/assembly_input_bundles:legacy_fuchsia",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":assembly_config_eng",
)

fuchsia_product(
    name = "assembly_eng.qemu-x64",
    board_config = "//boards:qemu-x64",
    legacy_bundle = "//build/bazel/assembly/assembly_input_bundles:legacy_fuchsia",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":assembly_config_eng",
)

fuchsia_product(
    name = "assembly_eng.arm64",
    board_config = "//boards:arm64",
    legacy_bundle = "//build/bazel/assembly/assembly_input_bundles:legacy_fuchsia",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":assembly_config_eng",
)

fuchsia_product(
    name = "assembly_eng.vim3",
    board_config = "//boards:vim3",
    legacy_bundle = "//build/bazel/assembly/assembly_input_bundles:legacy_fuchsia",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":assembly_config_eng",
)

fuchsia_elf_sizes(
    name = "elf_sizes.x64",
    product = ":assembly_eng.x64",
)

fuchsia_elf_sizes(
    name = "elf_sizes.arm64",
    product = ":assembly_eng.arm64",
)

fuchsia_elf_sizes(
    name = "elf_sizes.vim3",
    product = ":assembly_eng.vim3",
)

fuchsia_elf_sizes(
    name = "elf_sizes.qemu-x64",
    product = ":assembly_eng.qemu-x64",
)

fuchsia_virtual_device(
    name = "workbench_emu",
    arch = ARCH.X64,
    device_name = "workbench_emu",
    window_height_px = 1200,
    window_width_px = 720,
)

fuchsia_product_configuration(
    name = "assembly_config_eng",
    cache_packages = [
        ":workbench_session",
    ],
    product_config_json = {
        "platform": workbench_platform_config,
        "product": {
            "session_url": "fuchsia-pkg://fuchsia.com/workbench_session#meta/workbench_session.cm",
            "build_info": DEFAULT_PRODUCT_BUILD_INFO,
        },
    },
)

fuchsia_prebuilt_package(
    name = "workbench_session",
    archive = "@legacy_ninja_build_outputs//:workbench_session.far",
)
